<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_item_bg"
    android:paddingLeft="10dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jifenyongtu"
            android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_black_word_textcolor"
            android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuomingyi"
            android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_gray_word_textcolor"
            android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruhehuode"
            android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_black_word_textcolor"
            android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shuominger"
            android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_gray_word_textcolor"
            android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duihuanbilie"
            android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_black_word_textcolor"
            android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bilieyi"
                android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_gray_word_textcolor"
                android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yijifendengyuyifenqiang"
                android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_blue_word_textcolor"
                android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"

                />

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bilieer"
            android:textColor="@color/color_main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_gray_word_textcolor"
            android:textSize="@dimen/main_mine_jifenshangcheng_suoyoushangpin_duihuanjilu_jifenmingxi_jifenshuoming_content_word_size"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="9"
        >

    </RelativeLayout>
</LinearLayout>