<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_mine_login_reg_userdata_bg"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_sended_input"
            android:textSize="@dimen/main_mine_login_reg_userdata_content_title_word_size"
            android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        android:layout_weight="2.5"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >

                <EditText
                    android:id="@+id/et_main_mine_login_reg_userdata_content_tel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_your_tel"
                    android:textColorHint="@color/color_main_mine_login_reg_userdata_content_gray_word_textcolor"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:inputType="phone"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/color_main_mine_login_reg_userdata_content_splite_line"
            android:layout_marginLeft="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            android:layout_marginRight="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/identify"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >
                <EditText
                    android:id="@+id/et_main_mine_login_reg_userdata_content_yzm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_identify"
                    android:textColorHint="@color/color_main_mine_login_reg_userdata_content_gray_word_textcolor"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    />

            </RelativeLayout>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/color_main_mine_login_reg_userdata_content_splite_line"
            android:layout_marginLeft="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            android:layout_marginRight="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >
                <EditText
                    android:id="@+id/et_main_mine_login_reg_userdata_content_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_pass"
                    android:textColorHint="@color/color_main_mine_login_reg_userdata_content_gray_word_textcolor"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:inputType="textPassword"
                    />

            </RelativeLayout>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/color_main_mine_login_reg_userdata_content_splite_line"
            android:layout_marginLeft="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            android:layout_marginRight="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >
                <EditText
                    android:id="@+id/et_main_mine_login_reg_userdata_content_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_username"
                    android:textColorHint="@color/color_main_mine_login_reg_userdata_content_gray_word_textcolor"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    />

            </RelativeLayout>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/color_main_mine_login_reg_userdata_content_splite_line"
            android:layout_marginLeft="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            android:layout_marginRight="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_code"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >
                <EditText
                    android:id="@+id/et_main_mine_login_reg_userdata_content_yqm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_invite_code"
                    android:textColorHint="@color/color_main_mine_login_reg_userdata_content_gray_word_textcolor"
                    android:textColor="@color/color_main_mine_login_reg_userdata_content_black_word_textcolor"
                    android:textSize="@dimen/main_mine_login_reg_userdata_content_word_size"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    />

            </RelativeLayout>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/color_main_mine_login_reg_userdata_content_splite_line"
            android:layout_marginLeft="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            android:layout_marginRight="@dimen/main_mine_login_reg_userdata_content_margin_left_right_size"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/bt_main_mine_login_reg_userdata_content_reg_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_mine_login_reg_userdata_content_submit_height"
            android:layout_margin="@dimen/main_mine_login_reg_userdata_content_submit_margin_size"
            android:background="@drawable/activity_main_mine_login_reg_userdata_submit_half_radius_shape"
            android:text="@string/register_now"
            android:textColor="@color/color_main_mine_login_reg_userdata_submit_word_bg"
            android:textSize="@dimen/main_mine_login_reg_userdata_content_title_word_size"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="2"
        ></RelativeLayout>
</LinearLayout>